--- a/pages/p9/950503.md
+++ b/pages/p9/950503.md
@@ -1,4 +1,4 @@
-### 南海已成火药桶？专家支招用国际法解决(图)
+### 德外长：美欧需确立积极对华政策(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="印尼在南海军演" src="https://img3.secretchina.com/pic/2020/8-8/p2749581a831649189-ss.jpg" style="height:339px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="美国 德国 中国" src="https://img3.secretchina.com/pic/2020/8-1/p2744872a581841486-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   印尼在南海军演（图片来源：中央社）
+   德国外交部长海科·马斯（图片来源:Sean Gallup/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,72 +21,66 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《街对面的烛光》- 中领馆前16年7x24小时接力静坐抗议](http://141.164.51.119:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  中美熱戰在即嗎？中共將如何消亡？（脑洞vs黑洞 第21集）](http://141.164.51.119:10000/videos/news/brain01.html)
-
-#### [ 🔥  《漫谈党文化》今天的共产党和过去不一样了？](http://141.164.51.119:10000/videos/news/../res/mtdwh/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月13日讯】在
+  【看中国2020年10月27日讯】
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/南海" target="_blank">
-    南海
+   <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
+    美国
    </span>
   </strong>
-  形势日渐紧张的背景下，近日
+  大选临近，
   <strong>
-   中国
+   德国
   </strong>
-  军队接到命令，若与美军冲突，不开第一枪，不升级冲突。与此同时，日前有美国专家建议，
+  外交部长海科・马斯（Heiko Maas）呼吁，不论美国大选谁胜出，应给予跨大西洋的美欧合作伙伴关系新的开始。他暗示美欧双方应该消除分歧，共同应对
   <strong>
-   美国
+   北京
   </strong>
-  及南海诸国用国际法解决争端。
+  。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  近几个月以来，南
-  <span href="https://www.secretchina.com/news/gb/tag/中国" target="_blank">
-   中国
+  马斯10月25日在
+  <span href="https://zh.wikipedia.org/wiki/%E5%BE%B7%E5%9B%BD" target="_blank">
+   德国
   </span>
-  海的形势越来越眼花缭乱, 火药味渐浓。美中两国的军机频繁在从南中国海到东海的广大区域出现对峙局面。
- </p>
- <p>
-  <strong>
-   南海战争氛围越来越浓？
-  </strong>
- </p>
- <p>
-  据中国驻新西兰大使馆网站8月12日消息，中国驻新西兰吴玺大使在接受媒体采访时，暗指美国说，“个别国家”的军机今年上半年在
-  <span href="https://zh.wikipedia.org/zh/%E5%8D%97%E6%B5%B7" target="_blank">
-   南海
-  </span>
-  地区活动超过两千次。
- </p>
- <p>
-  有中国官方背景的《环球时报》则在日前的一篇文章中指出，
-  <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
+  报纸《星期日世界报》上发表文章称，
+  <span href="https://zh.wikipedia.org/wiki/%E7%BE%8E%E5%9B%BD" target="_blank">
    美国
   </span>
-  海军陆战队，甚至是美军总部，正在透过媒体鼓吹中美在南海一战，因为这有利于提升这些部门在美国南海战略中的地位。
+  大选无论谁将获胜，德国与欧洲都必须为“美国减少介入全球事务”做好准备。
  </p>
  <p>
-  另据香港《南华早报》得到的消息，中国政府已经命令军队在美中军事对峙的情况下，不开第一枪，不升级双方的冲突。报道认为，这是为了降低中美之间的紧张关系。
+  在谈到
+  <span href="https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%9C%8B" target="_blank">
+   中国
+  </span>
+  问题时他表示，美欧关系的未来取决于寻求正确的对华方式。他暗示美欧双方应该消除分歧，共同应对北京。
+ </p>
+ <p>
+  马斯指出，
+  <span href="https://www.secretchina.com/news/gb/tag/德国" target="_blank">
+   德国
+  </span>
+  政府将在美国大选后不久向华盛顿提出新的跨大西洋新议程的五项建议。
+ </p>
+ <p>
+  <strong>
+   欧洲应对美国大选保持冷静
+  </strong>
+ </p>
+ <p>
+  首先马斯表示，在11月3日美国大选没有明确的获胜者之际，必须避免仓促作出反应。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -101,7 +95,7 @@
   </div>
  </center>
  <p>
-  在战争氛围似乎越来越浓的背景下，日前有美国专家共同呼吁，通过国际法的多边机制来解决南海问题。
+  他说：“在美国大选的最后阶段，各路媒体不乏使用各种修饰词和末日般的情形对其进行描述，在这样的时刻理性和实用主义都供不应求，每次被过分夸大的变化都会在大西洋引起激浪，但现在我们比以往任何时候都更要保持冷静，为大选后的后果做好准备。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -117,7 +111,7 @@
  </center>
  <p>
   <strong>
-   国际法机制最有效 美国还需努力
+   欧洲需有独立自主性
   </strong>
  </p>
  <center>
@@ -133,7 +127,7 @@
   </div>
  </center>
  <p>
-  美国海军战争学院（U.S. Naval War College）史塔克顿国际法中心（Stockton Center for International Law）教授克拉斯卡（James Kraska）8月12日在华盛顿智库战略与国际研究中心的研讨会上指出，美国国务卿蓬佩奥7月14日就南海问题发表的演说表明，美国政府有决心通过法律途径解决南海争端。
+  其次，马斯表示，欧洲需要维护其独立自主性。美国与欧洲之间的新关系应该以欧洲人“在必要时独立应对危机”为主要方向，但是这并不意味着跨大西洋伙伴关系的倒退。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -148,7 +142,7 @@
   </div>
  </center>
  <p>
-  克拉斯卡分析说，“国际法是由国际社会共同做出权威性裁决的过程，它完全取决于国家之间的互相接触和合作。”他认为，美国政府在利用国际法方面做得还不够，
+  他强调说，只有一个能靠努力独立保护自己安全利益的欧洲，对美国而言才是更具有吸引力的伙伴。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -163,11 +157,43 @@
   </div>
  </center>
  <p>
-  近几年以来，美国政府在处理国际争端上较多强调自身的立场。今年初，有消息称，美国总统
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
+  马斯认为，欧洲人必须减少对美国参与国际事务的期待，这一观点不会因为美国大选的结果而改变。欧洲人将继续致力于建设欧洲共同防御能力。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   美欧应正确处理对华关系
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  马斯称，跨大西洋关系的未来也将取决于找到正确的对华方式。他说：“经过四年的艰难岁月，现在是跨大西洋伙伴关系重新开始的时候了，
+  <span href="https://www.secretchina.com/news/gb/tag/北京" target="_blank">
+   北京
   </span>
-  (特朗普)的一份行政令草案中提出，如果不按美国的想法进行调整，将考虑退出规模达1.7万亿美元的世界贸易组织(WTO)政府采购协定(GPA)。
+  和莫斯科、德黑兰和平壤都在利用我们的分歧。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -182,7 +208,11 @@
   </div>
  </center>
  <p>
-  川普总统就任期间，类似“退群”的做法和说法已经发生不止一起。早在川普上任之初，他就宣布退出“跨太平洋伙伴关系协定。”
+  他提到美欧应对北京的积极方式是重新在人权、公平贸易等领域展开合作。马斯表示，构建对
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  的关系也为德美合作提供了新的契机。如果能够协调欧盟、美国和中国三者在经贸上的共同利益，那么美国同样可以从欧盟作为中国最大贸易伙伴的这一角色中获益，从而避免作出互相施加惩罚性关税等举动。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -197,7 +227,9 @@
   </div>
  </center>
  <p>
-  新加坡国立大学国际法中心主任罗伯特•贝克曼(Robert Beckman)教授也在会议上指出，依靠国际法应是美国的选项之一。
+  <strong>
+   重新定位美德伙伴关系
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -212,37 +244,7 @@
   </div>
  </center>
  <p>
-  他暗示，现在的形势对美国及其伙伴国家解决南海争议是有利的，“不仅是东南亚国家越来越主动提出国际法裁决中的条款，而且还有两个大国参与进来，现在还有澳大利亚也在内。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  他观察到，东南亚国家联盟（简称“东盟”）在国际场合越来越频繁地引用国际仲裁庭2016年7月12日就中国和菲律宾的南海争端作出的裁决。这个裁决认为中国的“九段线”违反《联合国海洋法公约》，是有利于菲律宾的。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  海军战争学院的克拉斯卡教授强调，国际法可能是解决南海争端最有力的工具，“尤其是国际法中体现的‘普世价值’，这恰恰是中国共产党最害怕的。应该把国际法及其普世价值看作是一种力量的要素，它们可以帮助带来安全和稳定。”
+  马斯说，伙伴关系的定义不是盲目的跟从关系。华盛顿认为中（共）国的崛起是本世纪的主要战略挑战；美国与欧洲对于俄罗斯、中国、中东等地区的立场不一致，这与双方的地理格局和历史有关。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -261,22 +263,7 @@
   </ins>
  </center>
  <p>
-  他分析说，冷战时期，1975年签订的“赫尔辛基协议”（包括美苏在内的37个国家签订）可以借鉴。这一协议把人权等基本价值包括进来，以此来监督苏联等国家内部的人权等状况，并维系美苏战略平衡。克拉斯卡认为，美国也完全可以用相似的机制来监督如中国新疆的人权状况。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  中国媒体财新网站日前的一篇评论文章也指出，1975年的《赫尔辛基协议》，为美苏战略军备控制和管控分歧冲突提供了有效的机制保障，使冷战一直维持在“冷”的状态。
+  马斯认为，美德双方应该更紧密的协调和合作，把精力从不断制裁放到合作上，比如寻求俄罗斯加入世界贸易组织，或者关注巴尔干的政治前景等问题。双方应该定义出新的方式和举措，营造双赢的局面。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -292,7 +279,7 @@
  </center>
  <p>
   <strong>
-   不是要选边站
+   美德应互相学会倾听
   </strong>
  </p>
  <center>
@@ -308,7 +295,7 @@
   </div>
  </center>
  <p>
-  实际上，蓬佩奥在7月的南海演说中，除了首次声明中国在南海的主权声索完全非法外，也一再强调要用国际仲裁庭等国际法机制来解决南海争端，这也符合南海各方的利益。但贝克曼教授提醒，这不等于说其他国家要选边站。
+  马斯认为，特朗普作为美国总统的4年，大西洋两岸出现发出了消除意识形态壁垒的声音，希望消除分歧，拥抱对立的观点；但他说，事实表明我们还留在原地，两极化的美国大选表就是证据，大西洋两端不断加剧的种族问题也是证据。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -323,7 +310,7 @@
   </div>
  </center>
  <p>
-  “那些期待东盟选边站的人可能会失望。东盟国家，无论是作为一个有共识的整体，还是个体国家，都不会明确选择倾向于双方的任何一边，至少是在大国对抗的过程中。”
+  他说：“种族主义是大西洋两岸的日常现实，社会分歧正在上升。解决这些现象发展的根本原因是美国人、德国人和欧洲人面临的主要挑战之一。如果我们共同应对，相互倾听和相互学习，这将是一个更容易解决的挑战。正如伙伴和朋友一样。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -338,7 +325,22 @@
   </div>
  </center>
  <p>
-  新加坡《海峡时报》在蓬佩奥发表南海演说当天有一篇报道指出，菲律宾、马来西亚、越南和印度尼西亚等南海周边国家，将继续推动与中国发展双边关系，促进自己国家的利益，而不会在大国之间选边站。
+  他强调说：“美德两国的公民都相信民主、自由和对个人尊严的尊重，也相信国家存在是为人民服务，而不是相反。没有选举可以消除这些信念。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  但马斯也表示，若美国仍被内部斗争困扰，那么欧洲人将不得不对美国的国际参与度下降而进行调整。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -370,7 +372,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -402,13 +404,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/942771.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/942771.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/942771.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/13/942771.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/950503.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/950503.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/950503.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/27/950503.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p9/942771.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p9/950503.md' width='0px' height='0px'/>
