--- a/pages/prog202/a102972532.md
+++ b/pages/prog202/a102972532.md
@@ -1,4 +1,4 @@
-### 【全球新闻】10月2日完整版
+### 【全球新闻】10月26日完整版
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,32 +7,34 @@
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2020年10月03日讯】【全球新闻】10月2日完整版
+  【新唐人北京时间2020年10月27日讯】【全球新闻】10月26日完整版
  </p>
  <p>
   <strong>
    提要
+   <br/>
   </strong>
-  <br/>
-  川普染
-  <ok href="https://www.ntdtv.com/gb/中共病毒.htm">
-   中共病毒
+  <ok href="https://www.ntdtv.com/gb/川普.htm">
+   川普
   </ok>
-  送军队医院 各国首脑问候
-  <br/>
-  定性中共为
-  <ok href="https://www.ntdtv.com/gb/跨国犯罪集团.htm">
-   跨国犯罪集团
+  <ok href="https://www.ntdtv.com/gb/宾州.htm">
+   宾州
   </ok>
-  美议案引震撼
+  一天三场密集造势 拜登阵营无活动
   <br/>
-  大陆
-  <ok href="https://www.ntdtv.com/gb/十一长假.htm">
-   十一长假
+  新增138例感染者
+  <ok href="https://www.ntdtv.com/gb/新疆喀什.htm">
+   新疆喀什
   </ok>
-  景区爆满 民忧疫情扩大
+  已启动1级应急响应
   <br/>
-  在山野中奔驰 山地自行车世界杯大赛
+  “
+  <ok href="https://www.ntdtv.com/gb/利剑21.htm">
+   利剑21
+  </ok>
+  ”数万人大型军演 美日剑指中共
+  <br/>
+  奥运游泳馆开启 东京建成所有奥运新场馆
  </p>
  <div class="single_ad">
  </div>
@@ -40,13 +42,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102954820.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102954820.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102954820.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/10/03/a102954820.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102972532.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102972532.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102972532.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/10/27/a102972532.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102954820.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102972532.md' width='0px' height='0px'/>
