同步于: 10月28日21时53分

--- a/pages/p5/950702.md
+++ b/pages/p5/950702.md
@@ -1,4 +1,4 @@
-### 猪企疯狂扩张 未来将致产能过剩 猪肉价跌破10元？(图)
+### 美台贸易协定：供应链不可落入中国轨道
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,104 +6,80 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="猪肉 养猪 企业 产能" src="https://img3.secretchina.com/pic/2020/9-7/p2770801a694574349-ss.jpg"/>
-  <br>
-   业内人士表示，未来生猪行业会出现
-   <strong>
-    产能
-   </strong>
-   过剩，或将面临一场灾难。（图片来源：STR/AFP via Getty Images）
-   <span id="hideid" name="hideid" style="color:red;display:none;">
-    <span href="https://www.secretchina.com">
-    </span>
+ <p>
+  【看中国2020年10月28日讯】在
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
+    美国
    </span>
-  </br>
+  </strong>
+  即将举行总统选举前，美国国会、智库呼吁美台启动双边
+  <strong>
+   贸易
+  </strong>
+  协定谈判的呼声也在持续加大。
+  <strong>
+   台湾
+  </strong>
+  驻美代表萧美琴说，美台签署贸易协定有助分散对中国市场的过度依赖并确保供应链安全。分析人士说，台湾的
+  <strong>
+   供应链
+  </strong>
+  实力与全球都有关系，一旦台湾掉进中国轨道，其后果将令人难以想象。
+  <span id="hideid" name="hideid" style="color:red;display:none;">
+   <span href="https://www.secretchina.com">
+   </span>
+  </span>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  蓬佩奥、史达伟就有关中共军事霸凌等问题的讲话和回答记者问（字幕版）](http://141.164.51.119:10000/videos/news/pompeo7.html)
-
-#### [ 🔥  抗争成功典范：2016年湖北仙桃十万人游行示威反垃圾焚烧厂（项目取消，市长下课）](http://141.164.51.119:10000/videos/news/xiantao.html)
-
-#### [ 🔥  年底世界七大趋势｜中共战狼失利，全球反呛｜美中台能开战？川普将连任？](http://141.164.51.119:10000/videos/news/tanghao02.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月7日讯】（看中国记者丁晓雨综合报导）中国市场
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/猪肉" target="_blank">
-    猪肉
-   </span>
-  </strong>
-  价格依然一路高涨，巨大红利引发
-  <strong>
-   养猪企业
-  </strong>
-  疯狂扩张，有业内人士表示，在建或将建的养猪项目规模将达20亿头，而中国猪肉消费仅6.5亿头，未来生猪行业会出现
-  <strong>
-   产能
-  </strong>
-  过剩，或将面临一场灾难。养猪大户表示，2022年，猪肉价格会跌破10元，甚至4～5元。
+  尽管161位美国跨党派众议员及50位参议员都发表联名信，呼吁美国贸易代表莱特希泽与
+  <span href="https://www.secretchina.com/news/gb/tag/台湾" target="_blank">
+   台湾
+  </span>
+  启动贸易协定谈判的讨论，但《纽约时报》不久前在一篇报道中说，莱特希泽因不愿激怒北京使美中贸易协议受到干扰而顶回国会压力。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  Wind数据显示，截至8月28日，中国22个省市生猪均价在37.43元/公斤，同比上涨超过40%。22个省市猪肉平均价在53.50元/公斤，同比上涨近50%。虽然两者比之去年年底最高点有所回落，但依旧在高位徘徊。头部
-  <span href="https://www.secretchina.com/news/gb/tag/养猪" target="_blank">
-   养猪
+  在美国下星期就要举行总统选举前，美国布鲁金斯学会星期二(10月27日)发布了对美国下一届政府在外交政策上的一系列“可行性政策建议”清单，其中包括与台湾深化
+  <span href="https://www.secretchina.com/news/gb/tag/贸易" target="_blank">
+   贸易
   </span>
-  企业也因此赚到盆满钵满。
+  关系的建议。
  </p>
  <p>
-  数据显示，今年上半年，A股猪肉界的五大
-  <span href="https://zh.wikipedia.org/wiki/豬肉" target="_blank">
-   猪肉
+  该智库东亚政策客座资深研究员、前美国在台协会主席卜睿哲(Richard Bush)说，美国下一届政府“应该立即与台湾展开双边贸易协定谈判的探索性讨论，或是作为替代选项，它应该与台湾展开一系列关于贸易和投资协议的谈判，那些协议累积起来将具有等同于双边贸易协定的功能。”
+ </p>
+ <p>
+  同一天，在乔治华盛顿一场关于美台经贸关系前景的视讯讨论中，台湾驻美代表萧美琴表示，深化美台经贸关系是美国两党的共识，与美国同为民主体制的台湾也准备好与美国共同推进彼此的合作，无论是哪一个政党主政。
+ </p>
+ <p>
+  萧美琴说，由于目前的地缘竞争与紧张，
+  <span href="https://www.secretchina.com/news/gb/tag/供应链" target="_blank">
+   供应链
   </span>
-  股（牧原股份、新希望、温氏股份、正邦科技、天邦股份），无论从营收还是净利都实现了不同程度的增长。
+  安全的问题也受到高度注意，以确保重要技术的供应链只能在“可靠与可信任伙伴”间流通，美国政府近来推动的政策也是要避免重要技术落入那些没有相同伙伴关系的国家的控制，而台湾是全球重要半导体及其他高科技产品供应者，美台贸易协定将可提供私人企业更多市场机会建立那些技术和供应链的连结。
  </p>
  <p>
-  其中，新希望2020上半年总营收达446.96亿元，位居榜首；其次是温氏股份，上半年年总营收达359.68亿元；牧原股份上半年年总营收210.33亿元，位于排行榜第三。
- </p>
- <p>
-  在净利润指标上，牧原股份以107.84亿元利润总额排第一，同比增长7026.08%；温氏股份位于第二，利润总额为41.53亿元，同比增长200.33%；新希望以31.64亿元位于第三，同比大增102.57%。
- </p>
- <p>
-  从股价上看，今年以来，新希望股价已经上涨98.95%，截至9月4日收盘，报收于39.69元/股；今年来，天邦股份股价上涨55.46%，报收于19.51元/股；正邦科技股价上涨49.94%，报收于24.29元/股。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  据《中国经济周刊》报导，
-  <span href="https://zh.wikipedia.org/wiki/猪生产学" target="_blank">
-   养猪
+  她也指出，过去多年来台湾对
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  大户唐人神董事长陶一山表示，中国目前的高猪价 “千年一遇”。随着环保压力、非洲猪瘟等因素叠加，不断上涨的养猪成本压力定会传导到养殖户一端。随着开学季的来临，肉类需求有所增加，预计后期肉类价格仍有小幅走高的可能。
+  市场过度依赖，使台湾的经济及和安全面临极大风险，当前的政治及经济趋势让许多跨国企业注意其他市场机会，她认为美台贸易协定将鼓励企业分散对中国市场的依赖、促进投资回流到自己的市场。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -118,7 +94,7 @@
   </div>
  </center>
  <p>
-  公开数据显示，一季度唐人神每头猪平均盈利1938元，受猪价波动影响，二季度平均每头猪盈利仍超过1500元。1～6月，唐人神在每头猪身上盈利1685元。
+  萧美琴说，再过几天美国就要举行选举，“对美台深化经贸交往的支持一向是不分党派的项目”，她非常感激161名众议员及50名参议员，在跨党派基础上发表联名信支持与台湾签署贸易协定，“作为一个民主同伴，我们一直都准备好与无论哪一个执政的政党合作”，也期盼双方继续在会中所触及的，包括供应链安全等各项议题上能有进一步改善。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -133,11 +109,7 @@
   </div>
  </center>
  <p>
-  猪价的疯狂引发了养猪
-  <span href="https://www.secretchina.com/news/gb/tag/企业" target="_blank">
-   企业
-  </span>
-  的大规模扩张。
+  美台商业协会会长韩儒伯(Rupert Hammond Chambers)也强调供应链安全的问题。他说，台湾的台积电是全球重要芯片供应商，对全世界手机、电脑、汽车等产品占有重要分量，在中国对台湾威胁与日俱增之下，一旦中国控制台湾，使台湾技术落入中国的轨道后，那个情景将令人无法想象。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -152,7 +124,7 @@
   </div>
  </center>
  <p>
-  据农业农村部监测，7 月份全国生猪存栏环比增长 4.8%，连续 6 个月增长，同比增长 13.1%。今年以来，新建规模猪场投产累计已达9093 个，去年空栏的规模猪场已有11202个复养。
+  “一个重要的问题，我希望你们今天或在未来一段时间能提出的，就是当我们考虑到半导体产业在中国对台湾威胁的阴影下时，我们能否承担得起，见到台湾的技术落入中国的轨道？我们能否接受一个可能性，就是如果中国强迫攻击台湾，在这个可能情况下我们能否接受台湾的技术及生产技术的能力落入中国的轨道？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -167,7 +139,7 @@
   </div>
  </center>
  <p>
-  据方正中信期货《生猪周报》显示，2020年上半年，25家生猪养殖企业发布投资建厂信息，项目投资地点覆盖全国大多数省份，涉及投资金额1659亿元。
+  韩儒伯说，台湾现在处于西方轨道中，它的技术受到与美国、欧洲及其他西方民主体制同样的知识产权、商业秘密等相关法律的保障，而中国过去对知识产权及商业秘密的盗窃受到各方高度质疑，而其企业却在此基础上在全世界竞争，因此如果台湾落入中国轨道，可能发生的转变将会与当前的情况完全相反。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -182,7 +154,7 @@
   </div>
  </center>
  <p>
-  牧原股份上半年末的生产性生物资产环比一季度增11.66%，较期初增加39.74%。
+  前美国驻港澳总领事唐伟康(Kurt Tong)也以他曾在美国政府中主管经贸事务的经验表示，从地缘经济及战略利益的层面来看，美台展开双边贸易协定谈判“是有道理的”，尤其受到疫情影响，人们对供应链安全的重要性有更多理解，更开放的市场与经济融合对美国、台湾及整个地区都是有益的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -197,7 +169,7 @@
   </div>
  </center>
  <p>
-  温氏股份上半年末的生产性生物资产环比一季度大增44.27%，比年初增加40.6%。
+  唐伟康还说，尽管中国是一个“不情愿的开放者”(reluctant opener)，它的许多行为也是美国的战略、经济关切和挑战，但那并不表示美国就要忽略它，相反的，美国应该与中国合作改善情况，例如在美台双边贸易协定的例子上，美国更应该加倍努力，与中国共同谋求改善彼此的关系。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -212,7 +184,7 @@
   </div>
  </center>
  <p>
-  新希望上半年末的生产性生物资产达79.51亿元，环比一季度猛增103.7%。
+  对于近来中国不断加大对台湾的军事威胁，美国政府又在一个星期不到的时间里宣布两次共四笔对台军售，引来中国政府强烈反应并表示将制裁美国军售厂商，美国之音问，台海紧张加剧是否增加冲突发生的几率？如何管控避免意外发生？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -227,22 +199,7 @@
   </div>
  </center>
  <p>
-  正邦科技上半年末的生产性生物资产高达64.6亿元，环比一季度增24.34%，
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  天邦股份上半年末的生产性生物资产为20.76亿元，环比一季度增44.38%。
+  唐伟康说，所有人都希望台海和平，这也是各方需要努力的目标，但中国过去几年来的言论令人非常担忧，在台湾选举期间的行为更是“极度不适当”(grossly inappropriate)，既挑衅又极具煽动性，美国的反应便是要确认基于《台湾关系法》的承诺，与台湾讨论它的自我防卫需求以便维持台海和平现状，也因此而有近来的军售宣布。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -261,7 +218,7 @@
   </ins>
  </center>
  <p>
-  各大公司的解释，都是生猪规模扩大，种猪存栏量增加。
+  对于台海发生冲突的可能性，唐伟康说，这是难以预料的情况，但台海情势的确十分严峻，美国、台湾和中国都有责任维持此地的和平。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -276,11 +233,11 @@
   </div>
  </center>
  <p>
-  唐人神董事长陶一山表示，据不完全统计，中国各大养猪企业已发布的在建或将建的养猪项目规模将达20亿头，而中国猪肉消费仅6.5亿头，未来生猪行业会出现
-  <span href="https://www.secretchina.com/news/gb/tag/产能" target="_blank">
-   产能
+  韩儒伯也认为，台海军事升级令人担忧，不过目前应该是美中紧张关系的“高峰”(peak)，他相信在美国总统选举后局势应该会降温，因为如果是
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
   </span>
-  过剩，或将面临一场灾难。
+  (特朗普)连任，他需要聚焦于恢复美国经济，也会面对一些要求改善与中国关系的压力；如果是拜登当选，他也会为了回应选民对气候变化议题的要求而降低与中国的紧张，因此在这两种可能情况下，他预期可以见到的是美中紧张减低，连带的也让台海情势降温。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -295,11 +252,7 @@
   </div>
  </center>
  <p>
-  陶一山对《
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  经济周刊》表示，“猪肉价格拐点在明年初，随着新一波猪周期启动，生猪产能将面临过剩。早已有圈内养猪大户预测，到2022年，国内肉价将跌到10块。我更悲观，届时肉价跌到4-5块都是完全可能的。”
+  不过韩儒伯说，无论是哪一个政党执政，他都希望美国政府不要因为台海情势和缓就放松强化台湾威慑能力的努力，如同最近两次军售要做的一样。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -314,7 +267,7 @@
   </div>
  </center>
  <p>
-  而且随着养猪成本压力的上升，未来养猪业躺着赚钱的好日子恐怕不会再现。
+  至于中国外交部表明将制裁售台武器的美国国防厂商，韩儒伯在答复另一个关于中国对美台签署贸易协定可能有何反应的提问时说，台湾是世界贸易组织的成员，美台完全有理由签订双边贸易协定，中国的筹码其实“相当有限”，正如它宣称要报复美国国防厂商一样，因为这些厂商在中国业务不多。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -329,22 +282,7 @@
   </div>
  </center>
  <p>
-  瑞达期货数据显示，目前玉米价格已经涨至近年来历史最高点，由1月初的1915元/吨涨到8月27日的2340元/吨，涨幅近20%。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  一个生猪养殖企业主表示，300元的猪场租赁费，300元的委托养殖费，光养殖这端的成本达600元，再加上折旧费和管理费，养猪企业能够承受这成本并赚到钱的不多。
+  中国外交部发言人赵立坚星期一在记者会上说，美国向台湾出售武器“严重违反”一中原则及中美三个联合公报，对此中方坚决反对并予以强烈谴责。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -376,7 +314,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -408,13 +346,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945367.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945367.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945367.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/07/945367.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950702.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950702.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950702.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/28/950702.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/945367.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/950702.md' width='0px' height='0px'/>
