--- a/pages/p5/950746.md
+++ b/pages/p5/950746.md
@@ -1,4 +1,4 @@
-### 忠义之气可与岳飞媲美 猜猜他是谁？(图)
+### 再掀偷渡潮显示中国经济急速恶化中(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="忠义之气可与岳飞媲美——诸葛亮" src="https://img2.secretchina.com/pic/2019/8-18/p2494832a866101758-ss.jpg"/>
+  <img src="https://img3.secretchina.com/pic/2020/10-29/p2806641a954992174-ss.jpg"/>
   <br>
-   忠义之气可与岳飞媲美——诸葛亮（图片来源：天外客／正见网）
+   中国再掀出逃潮逾百广西民工偷渡越南谋生被捕。（图片来源：自由亚洲电台）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,59 +29,54 @@
   </div>
  </div>
  <p>
-  一谈到忠义之气，很多人会想到
+  【看中国2020年10月29日讯】由于大量
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/岳飞" target="_blank">
-    岳飞
+   外资企业
+  </strong>
+  撤出中国，中国失业
+  <strong>
+   工人
+  </strong>
+  为了谋生，不惜冒险
+  <strong>
+   偷渡
+  </strong>
+  到
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/越南" target="_blank">
+    越南
    </span>
   </strong>
-  。有点历史知识，对岳飞生平事迹有所了解的，今天到了位于河南安阳汤阴县的岳飞庙，看到岳飞巍然屹立的塑像，头顶匾额上“还我河山”的巍峨大字，对岳飞会肃然起敬，会被岳飞的“浩气忠魂”所感动。岳飞的
-  <strong>
-   忠义
-  </strong>
-  之气贯通古今。
+  。越南公安边防局近日在中越边境地区先后抓获100多名来自中国广西的偷渡者。这批偷渡者原本在广东打工，打算到越南寻找工作机会。中方在部分地区筑起围墙，防止中国人偷渡。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  岳飞的故事在《说岳全传》里以小说演义的形式出现，绘声绘色，形象生动。岳飞对母亲很孝顺，听母亲的话。岳母怕岳飞以后随着地位的升迁失去
-  <span href="https://www.secretchina.com/news/gb/tag/忠义" target="_blank">
-   忠义
+  越南边防部队破获两起特大中国人偷渡越南的案件。综合越南多方消息，本周日，越南北方谅山省公安边防局在境内抓获中国广西籍偷渡越南的中国人76名，河靖省边防局拘留25名中国广西籍偷渡者。经初步审讯，被捕者原本在广东打工，但自去年初以来，因大批外贸企业撤离，导致
+  <span href="https://www.secretchina.com/news/gb/tag/工人" target="_blank">
+   工人
   </span>
-  本色，在他的后背上刺上“尽忠报国”四个字（在小说中是“精忠报国”）；岳飞领兵打仗，秉承忠义本色，带出一支“冻死不拆屋，饿死不掳掠”的岳家军，金国士兵只要看到“岳”字旗就闻风丧胆；被秦桧以“莫须有”的罪名诬陷入狱，岳飞也没有屈打成招。第一次在大理寺卿被审讯时，岳飞脱去布衫，露出背上“尽忠报国”四个字，亲见者无不动容，相信岳飞是冤枉的，但面对秦桧的淫威，正义者都感到无能为力。秦桧安排自己的亲信强迫岳飞写下供状，岳飞写下了“天日昭昭、天日昭昭”八个大字，一片忠义之气、忠义之心，力透纸背，苍天可监。一直到岳飞屈死风波亭，给后人留下了不可磨灭的忠义之气。
+  失业，当他们得知撤资企业已搬到越南，打算前往岘港打工。
  </p>
  <p>
-  历史上还有一个人物的忠义之气可以和岳飞相媲美，就是老少妇孺皆知的
-  <span href="https://www.secretchina.com/news/gb/tag/诸葛亮" target="_blank">
-   诸葛亮
+  越南平阳省逸安县安平社台商负责人郭海光周三接受本台采访时说，去年以来，有不少中国大陆人
+  <span href="https://www.secretchina.com/news/gb/tag/偷渡" target="_blank">
+   偷渡
   </span>
-  。
+  到越南找工作：“最近这几年多了，大部分人从北方那边，越境偷渡过来，从小路偷渡，大陆边界是广西，还有从云南过来的。”
  </p>
  <p>
-  大陆的读者阅读《三国演义》，看到诸葛亮出场后，故事精彩连呈，很多人关注的是诸葛亮的智谋，运筹帷幄的本事，但很少有读者关注到诸葛亮的忠义之气。岳飞的忠义之气，是在善恶较量，激烈的碰撞中表现，很容易引起人心灵的共鸣，能激起人对恶的憎恶，对善的渴望与赞美。诸葛亮的不是，他是在一言一行，在一场场政治、军事较量中体现，而且他的智勇双全很容易掩盖他的忠义之气，不仔细思考与体察，很容易被忽略。
+  据腾讯微博“越南那些事”说，近日，越南各大媒体发布消息，谅山省公安与交警队配合抓捕了非法入境越南的20名外籍人士和3名越南籍驾驶员，其中2名驾驶员对毒品呈阳性反应。
  </p>
  <p>
-  诸葛亮未出茅庐，已经知道天下要三分，这是天意。刘备因自己的皇叔身份，觉得自己有责任匡扶汉室，所以要以汉室名义再次一统天下。诸葛亮为了酬谢刘备的三顾茅庐之恩义，一心一意的帮助刘备实现梦想，整个过程中可谓尽心尽力，一片忠义之心。从刘备无立足之地，到有点政治资本与积累，最后片隅川蜀之地建立蜀国政权。
+  <strong>
+   越南中资企为节省成本招募中国偷渡客
+  </strong>
  </p>
  <p>
-  建立蜀国后，有帮助刘备出谋划策，联吴抗曹，训练士兵积极备战，为国家的未来发展制定了一系列政策，为民为国操碎了心。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  刘备听说关羽被吴国所杀，要倾一国之力讨伐东吴。诸葛亮没有死谏刘备，是因为诸葛亮知道刘、关、张的桃园三结义，会为未来奠定“义”文化，“义”文化要有始有终，虽然东吴不当灭，刘备即使兵败，也为奠定未来文化尽了力，从另一方面讲，是成就了刘备，这同样是诸葛亮忠义的表现。
+  10月26日，越南公安部所属交警局2号高速检查站中校阮长山告知，该单位收到谅山警方的通知后。于同日凌晨1点钟左右，在广宁至海防再到河内的高速公路上，对一伙偷渡客进行拦截并拘捕。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -96,7 +91,7 @@
   </div>
  </center>
  <p>
-  刘备兵败，困守白帝城，把刘禅讬付给诸葛亮，并嘱咐：如果刘禅不合适当皇帝，诸葛亮可以取而代之。《三国演义》中描述诸葛亮的表现：孔明听毕，汗流遍地，手足无措，泣拜于地曰：“臣安敢不竭股肱之力，尽忠贞之节，继之以死乎！”言讫，叩头流血。中共党文化称之为诸葛亮虚伪，怕被刘备杀头，故意为之。根本不是。满脑子党文化，否定传统文化的中共御用文人，根本就体会不到人有了忠义之气后的表现。笔者引用这段文字，能真实的感受到诸葛亮言行中的忠义之气。
+  在检查过程中发现2辆丰田越野车和一辆丰田商务车，车上共载有23人，其中20人为外籍人士，他们都没有合法入境证件。另外3名驾驶员为越南本土人士。被捕者已被送往谅山公安机关，接受警方深入调查。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -111,7 +106,7 @@
   </div>
  </center>
  <p>
-  刘禅即位后，诸葛亮明知蜀国灭不了魏国，也统一不了天下，但是诸葛亮仍然像刘备在世时那样，帮助刘备实现未竟的愿望。六出祁山，讨伐魏国，每次都是各种原因兵败而回。战场上的不确定的因素太多，特别是兵败的，最容易引起溃败与伤亡，但是诸葛亮每次都是全身而退，这难道不是诸葛亮忠义之气的体现？！
+  旅居越南南部的郭海光对本台说，越南警方通常会拘留偷渡客一段时间，再罚款、驱逐：“越南公安很厉害，会调查，把你关起来，然后把你赶回去。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -126,7 +121,43 @@
   </div>
  </center>
  <p>
-  失街亭一节，中共又是编入中学课本，又是变成戏剧，目的可不是颂扬诸葛亮，而是贬低丑化诸葛亮，那么有智慧，上知天文，下知地理，能掐会算的人，怎么会出现这么低级的错误？
+  自由亚洲电台一周前曾报导，10月20日在广西中越边境友谊关一带，聚集了近千名中国技术人员，他们打算前往越南打工。郭海光说。
+  <span href="https://www.secretchina.com/news/gb/tag/外资企业" target="_blank">
+   外资企业
+  </span>
+  一般不会聘请非法入境者，但中国在当地开设的小工厂可能会：“不敢的，只有中国大陆人比较胆子大，但不是大企业，是小企业。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   再掀偷渡潮显示中国经济急速恶化中
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  上个世纪七八十年代，众多越南人偷渡西方谋生，去年10月，曾有39名越南人偷渡英国艾塞克斯郡，被发现死于一辆货车中。一年后，发生大量中国人偷渡越南。网民发帖称，昔日越南人偷渡英国，如今中国人偷渡越南，歧视链已经形成了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,7 +176,7 @@
   </ins>
  </center>
  <p>
-  诸葛亮灭不了魏国，这是天意，每次兵出祁山，都是注定要失败的。街亭当时是个重要的军事重地，换任何人去守，都必失，只是时间长短而已。诸葛亮安排言过其实的马谡去守街亭，用意很深。未来的文化不能没有教训存在，马谡为后世留下宝贵的教训：言过其实，不可大用；另外一点，是成就了马谡，能在未来的文化中留下名字都是非同小可的事。
+  广西商人陈先生对本台说：“现在越南的经济发展就像当年的深圳，比大陆开放的地方可能都要强很多，所以从经济上，商业上来说，劳工向越南转移的态势基本上已经确定了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -160,7 +191,7 @@
   </div>
  </center>
  <p>
-  《三国演义》中有一句话评价诸葛亮：诸葛一生唯谨慎。确实是，诸葛亮做事很谨慎，他要考虑的不单单是当时的境况与天象变化，既要顺应天意，又要为未来留下表现仁、义、礼、智、信，忠、孝、节、义等文化，不能不谨慎，可以说诸葛亮为了人类的未来鞠躬尽瘁，操碎了心血，单单一个“忠义之气”，诸葛亮用尽了出山后所有的能力去演绎，直到病死五丈原。即使在病重期间，安排的后世中同样贯穿着诸葛亮的忠义之气，读者用心读就能领略一二。
+  北京居民孙雨辰对本台说，偷渡者通常是由经济落后地区前往发达地区，但是中国人偷渡越南，值得深思：“偷渡到越南去说明至少在中国的机会不多，这说明中国的经济在走严重下坡，现在只能说明大陆的经济愈来愈不好了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -175,7 +206,22 @@
   </div>
  </center>
  <p>
-  站在党文化的角度研究《三国演义》，站在否定古人的角度研究诸葛亮，永远得不到真知灼见。摒弃党文化，复兴传统文化，走回传统路时，人一定能得到许多正的认识与不一样的感受和思想的升华。
+  另有视频显示，中国在中越边境线修建数百公里长的围墙，墙高2米，据说是为了防止国人出逃。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  版权所有©2006,RFA。经Radio Free Asia,2025 MSt.NW,Suite 300,Washington DC 20036许可进行再版。http://www.rfa.org。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -239,13 +285,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/910977.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/910977.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/910977.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/22/910977.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950746.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950746.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950746.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/29/950746.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/910977.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/950746.md' width='0px' height='0px'/>
